src/test/ui/generator/partial-initialization-across-yield.stderr
error[E0381]: binding `t` isn't fully initialized
  --> $DIR/partial-initialization-across-yield.rs:12:9
   |
LL |         let mut t: (i32, i32);
   |             ----- variable declared here
LL |         t.0 = 42;
   |         ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate, or use `std::mem::MaybeUninit`

error[E0381]: binding `t` isn't fully initialized
  --> $DIR/partial-initialization-across-yield.rs:22:9
   |
LL |         let mut t: T;
   |             ----- variable declared here
LL |         t.0 = 42;
   |         ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate, or use `std::mem::MaybeUninit`

error[E0381]: binding `t` isn't fully initialized
  --> $DIR/partial-initialization-across-yield.rs:32:9
   |
LL |         let mut t: S;
   |             ----- variable declared here
LL |         t.x = 42;
   |         ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate, or use `std::mem::MaybeUninit`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0381`.
